# pyarc2stac

./: README.md  pyproject.toml
examples/: Convert_WMS_To_Collection_STAC.ipynb  FeatureServer_to_STAC.ipynb  Fetch_Timeseries.ipynb  Fetsh_timeseries.ipynb  Get_Legend.ipynb  ImageServer_to_STAC.ipynb  MapServer_to_STAC.ipynb  Untitled.ipynb  requirements.txt
pyarc2stac/: ArcReader.py  WMSReader.py  __init__.py  arc.py  timeseries.py  utils.py
tests/: test_featureserver.py  test_imageserver.py  test_mapserver.py
